fix map style on mobile

--- a/client/src/components/map/map.css
+++ b/client/src/components/map/map.css
@@ -6,6 +6,7 @@
 }
 
 .map-container {
+  min-height: 500px;
   height: 100% !important;
 }
 
